Lots of config system adjustments to "clarify" and fix the onValueChanged() callbacks across the board.  A few other fixes, etc. Mostly this solves the `setValueFromJsonElement()` problems by using a few extra functions / interfaces along with the use of 'markDirty / markClean'.
Perhaps I can simplify these better in the next major update.